fix: Improve font rendering and text legibility in CSS files

--- a/_css/base.css
+++ b/_css/base.css
@@ -11,6 +11,9 @@ body {
   background-color: var(--body-bg);
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 a {
